fix footer text alignment problem and content-text3 overflow problem

--- a/styles.css
+++ b/styles.css
@@ -367,7 +367,6 @@ html {
   padding: 5px;
   margin: 0px 0;
   text-align: center;
-  width: 100%;
   color: #ffffff;
   font-family: Poppins, sans-serif;
 }
